# StudyAnything

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
chapter_1_web/: test_fastapi.py  test_fastapi_1.py  test_news_shangqi.py  test_requests.py
chapter_1_web/LLM_AGENTS/: LLM_AGENTS.py
chapter_1_web/fastapi_app_1/: .env  README.md  base.sql  config.py  database.py  main.py
chapter_1_web/fastapi_app_1/models/: student.py
chapter_1_web/fastapi_app_1/repositories/: student.py
chapter_1_web/fastapi_app_1/routers/: health.py  student.py
chapter_1_web/fastapi_app_1/schemas/: student.py
chapter_1_web/fastapi_app_1/services/: student.py
chapter_1_web/frontend/: hello.js  test_1.js
chapter_1_web/student-frontend/: package-lock.json  package.json
chapter_1_web/student-frontend/src/: App.jsx  api.js
chapter_1_web/student-frontend/src/components/: AnimatedList.jsx  MagicCard.jsx  NumberTicker.jsx  ShimmerButton.jsx
chapter_2_DataProcessing/: test_list.py  test_pandas.py
chapter_3_pythonBase/: base_1.py  base_2.py  base_3.py  test_llmApiUse.py
chapter_3_pythonBase/ASMR_python_games/Missile-Command-main/: city.py  config.py  defence.py  explosion.py  functions.py  mcgame.py  missile-defence.py  missile.py  text.py
chapter_4_AICoding/shadcn-vue-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
chapter_4_AICoding/shadcn-vue-ui/src/: App.vue  style.css
chapter_4_AICoding/shadcn-vue-ui/src/api/: auth.ts  client.ts  index.ts
chapter_4_AICoding/shadcn-vue-ui/src/router/: index.ts
(+12 files in other folders)
