[project]
name = "standardized-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.135.3",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "tavily>=1.1.0",
    "uvicorn>=0.44.0",
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
